--- a/推播通知.html
+++ b/推播通知.html
@@ -636,7 +636,7 @@ document.addEventListener('DOMContentLoaded', function() {
     ];
     
     const historyData = [
-        { pushId: 'GEN-20250826ABCD', type: '一般通知', status: 'review', title: 'Pi 拍錢包 App 全新升級！', description: '更快速、更安全的支付體驗...', audience: '全會員', exclude: '無', scheduledDate: '2025-08-26 15:00:00', actualDate: null, createdDate: '2025-08-26 14:30:00', creator: 'Admin', approvalDate: null, approver: null },
+        { pushId: 'GEN-20250826ABCD', type: '一般通知', status: 'review', title: 'App 全新升級！', description: '更快速、更安全的支付體驗...', audience: '全會員', exclude: '無', scheduledDate: '2025-08-26 15:00:00', actualDate: null, createdDate: '2025-08-26 14:30:00', creator: 'Admin', approvalDate: null, approver: null },
         { pushId: 'EVT-20250826EFGH', type: '活動消息', status: 'scheduled', title: '週末美食節，享受5% P幣回饋！', description: '本週末於指定餐廳消費...', audience: 'VIP用戶', exclude: '客訴名單', scheduledDate: '2025-08-29 12:00:00', actualDate: null, createdDate: '2025-08-26 10:00:00', creator: 'Marketing', approvalDate: '2025-08-26 11:00:00', approver: 'Manager' },
         { pushId: 'MNT-20250825IJKL', type: '維護公告', status: 'sent', title: '系統維護通知 (02:00-04:00)', description: '為提供更優質的服務...', audience: '全會員', exclude: '無', scheduledDate: '2025-08-25 00:00:00', actualDate: '2025-08-25 00:00:05', createdDate: '2025-08-24 18:00:00', creator: 'TechTeam', approvalDate: '2025-08-24 18:30:00', approver: 'Lead' },
     ];
